--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
             <groupId>terrastore</groupId>
             <artifactId>terrastore</artifactId>
             <version>0.4.2-SNAPSHOT</version>
+            <classifier>api</classifier>
             <scope>provided</scope>
         </dependency>
         <dependency>
