--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,15 @@
     <packaging>jar</packaging>
     <version>0.1-SNAPSHOT</version>
     <name>terrastore-search</name>
+    <scm>
+        <connection>scm:hg:https://search.terrastore.googlecode.com/hg</connection>
+        <developerConnection>scm:hg:https://search.terrastore.googlecode.com/hg</developerConnection>
+    </scm>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -21,7 +24,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.2</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
