--- a/pom.xml
+++ b/pom.xml
@@ -48,27 +48,27 @@
         <dependency>
             <groupId>elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>0.4.0</version>
+            <version>0.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-analyzers</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queries</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>jgroups</groupId>
             <artifactId>jgroups</artifactId>
-            <version>2.8.0.GA</version>
+            <version>2.9.0.GA</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>terrastore</groupId>
             <artifactId>terrastore</artifactId>
-            <version>0.4.2</version>
+            <version>0.4.3-SNAPSHOT</version>
             <classifier>api</classifier>
             <scope>provided</scope>
         </dependency>
