--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>terrastore</groupId>
     <artifactId>terrastore-search</artifactId>
     <packaging>jar</packaging>
-    <version>0.5-SNAPSHOT</version>
+    <version>0.4.1</version>
     <name>terrastore-search</name>
     <scm>
         <connection>scm:hg:https://search.terrastore.googlecode.com/hg</connection>
